--- a/css/tmall-stylesheet.css
+++ b/css/tmall-stylesheet.css
@@ -7,310 +7,309 @@ body {
   			font-stretch: normal;
   			line-height: 1.5;
   			margin:0;
-		}
-		address, cite, dfn, em, var {
-  			font-style: normal;
-		}
-		img,ul,li,a,h1{
-			margin: 0;
-			padding: 0;
-		}
-		a{
-			color:#999;
-			text-decoration:none;
-		}
-		
-		a:hover{
-			color: #c40000;
-			text-decoration:underline; 
-		}
-		.hidden{
-			display: none;
-		}
-    .show{
-      display: block;
-    }
-		.font-red{
-			color:#c40000;
-		}
-    .bg-red{
-      background-color:#c40000;
-    }
-    .search-float-form{
-      width:740px;
-      border:0;
-      background-color:white;
-      opacity: 1;
-      height: 30px;
-      margin: auto;
-      top:10px;
-      position: relative;
-    }
-    .search-float-form input{
-      width: 640px;
-      height:25px;
-      position: relative;
-      background: 0 0;
-      line-height: 22px;
-      padding:2px 5px;
-      width: 630px;
-      border:0;
-      outline:none;
-    }
-    .search-float-form button{
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 100px;
-      height: 30px;
-      font-size: 16px;
-      letter-spacing: 4px;
-      cursor: pointer;
-      color: #fff;
-      background-color: #c40000;
-      overflow: hidden;
-      border: 0;
-      font-family: '\5FAE\8F6F\96C5\9ED1',arial,"\5b8b\4f53";
-    }
-		.right-ul{
-			display:inline-block;
-			position: absolute;
-			right:0;
-			top:0;
-			list-style: none;
-		}
-		.right-ul li{
-			float:left;
-			position: relative;
-			/*padding-right: 14px;*/
-		}
-		.sn-tmall-bao{
-			padding-left: 16px;
-  			padding-right: 10px;
-  			background: transparent url(../images/why-fullimg.png) no-repeat;
-  			background-position: -427px 7px;
-		}
-		#site-nav{
-			/*页顶导航条*/
-			height: 26px;
-  		line-height: 26px;
-			color: #999;
-			min-width: 990px;
- 			width: auto;
-  		position: relative!important;
-  		background: #f2f2f2;
-  		-webkit-transform: translate3d(0,0,0);
-  		border-bottom: 1px solid #e5e5e5;
-  		position: relative;
-		}
-		.logo-pic{
-			background-color:red;
-			border-radius:1000px;
-			font-size: 1.2rem;
-  			font-weight: 700;
-  			color: #fff;
-		}
-		#sn-bd{
-			/*导航条上面的文字*/
-			margin:auto;
-			width: 1190px;
-		}
-		.menu-bd{
-  			position: absolute;
-  			left: 0;
-  			top: 27px;
-  			background: #fff;
-  			border: solid #eee;
-  			border-width: 0 1px 1px;
-  			width: 74px;
-  			line-height: 1.4;
-  			padding: 8px 10px;
-  			display: none;
-		}
- 		.drop-down-list{
-        	position: relative;
-        	padding-left: 10px;
-        	padding-right:14px;
-        }
-		.back-home {
-			line-height: 26px;
-  			margin:0px 20px 0px 0px;
-  			display:inline-block;
-		}
-		.sn-login-part {
-			display:inline-block;
-			margin:0px 20px 0px 0px;
-		}
-		.sn-mybrand ,.sn-sitemap, .sn-cart{
-			 padding: 0 10px;
-		}
+	}
+address, cite, dfn, em, var {
+		font-style: normal;
+}
+img,ul,li,a,h1{
+	margin: 0;
+	padding: 0;
+}
+a{
+	color:#999;
+	text-decoration:none;
+}
 
-		.sn-seperate{
-			width: 0;
-  			height: 14px;
-  			vertical-align: top;
-  			position: relative;
- 			top: 6px;
-  			left: 0;
-  			font-size: 0;
-  			border-left: 1px solid #ccc;
-		}
-		.triangle{
-            width:0;
-			height:0;
-			line-height: 0;
-			font-size:0;
-			border:4px solid #999;
-			border-left:4px solid transparent;
-			border-right:4px solid transparent;
-			border-bottom:4px solid transparent;
-			display: inline-block;
-			position: relative;
-			top:1px;
-			left:2px;
-        }
-        .sn-sitemap-div {
-        	position:absolute;
-        	top:27px;
-        	right:10px;
-        	left:auto;
-        	margin:auto;
-        	width:1188px;
-        	height:30px;
-        }
-        .header-layout{
-        	width: 1190px;
-        	margin:0 auto;
-        	padding-top: 26px;
-        	height: auto;
-        	height: 85px;
-        }
-        #mallLogo{
-        	display: inline-block;
-        	padding-top: 0;
-  			width: 340px;
-  			height: 85px;
-  			float: left;
-        }
-        #mallLogo img{
-        	width: 200px;
-        	height: 35px;
-        }
-        #header-searchbar{
-        	display: inline-block;
-        	width: 540px!important;
-        	height: 85px;
-        	float: left;
-        }
-        .search-top-form{
-  			border: solid #c40000;
-  			border-width: 3px 0 3px 3px;
-  			position: relative;
-  			height: 32px;
-        }
-        .search-top-form input{
-        	position: relative;
- 	       	background: 0 0;
-  			height: 22px;
- 		 	line-height: 22px;
-  			padding: 6px;
-  			width: 437px;
-  			border:0;
-  			font-weight: 900;
-  			vertical-align: middle;
-  			outline:none;
-        }
-        .search-top-form button{
-        	position: absolute;
-  			right: 0;
-  			top: 0;
-  			width: 90px;
-  			border: 0;
-  			font-size: 16px;
-  			letter-spacing: 4px;
-  			cursor: pointer;
-  			color: #fff;
-  			background-color: #c40000;
-  			height: 35px;
-  			overflow: hidden;
-  			font-family: '\5FAE\8F6F\96C5\9ED1',arial,"\5b8b\4f53";
-        }
-        #header-searchbar ul{
-			list-style: none;   
-			margin-left:-13px;
-			height: 16px;     	
-			padding:0;
-			margin: 0;
-			padding-top: 6px;
-        }
-        #header-searchbar li{
-        	display: inline-block;
-			border-right: 1px solid #ccc;
-			padding-right: 12px;
-			padding-left:12px;
-        }
-        #content{
-       position: relative;
-  			width: auto;
-  			margin: 0;
-/*  			padding-bottom: 30px;
-*/        }
+a:hover{
+	color: #c40000;
+	text-decoration:underline; 
+}
+.hidden{
+	display: none;
+}
+.show{
+  display: block;
+}
+.font-red{
+	color:#c40000;
+}
+.bg-red{
+  background-color:#c40000;
+}
+.search-float-form{
+  width:740px;
+  border:0;
+  background-color:white;
+  opacity: 1;
+  height: 30px;
+  margin: auto;
+  top:10px;
+  position: relative;
+}
+.search-float-form input{
+  width: 640px;
+  height:25px;
+  position: relative;
+  background: 0 0;
+  line-height: 22px;
+  padding:2px 5px;
+  width: 630px;
+  border:0;
+  outline:none;
+}
+.search-float-form button{
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  letter-spacing: 4px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #c40000;
+  overflow: hidden;
+  border: 0;
+  font-family: '\5FAE\8F6F\96C5\9ED1',arial,"\5b8b\4f53";
+}
+.right-ul{
+	display:inline-block;
+	position: absolute;
+	right:0;
+	top:0;
+	list-style: none;
+}
+.right-ul li{
+	float:left;
+	position: relative;
+	/*padding-right: 14px;*/
+}
+.sn-tmall-bao{
+	padding-left: 16px;
+		padding-right: 10px;
+		background: transparent url(../images/why-fullimg.png) no-repeat;
+		background-position: -427px 7px;
+}
+#site-nav{
+	/*页顶导航条*/
+	height: 26px;
+	line-height: 26px;
+	color: #999;
+	min-width: 990px;
+		width: auto;
+	position: relative!important;
+	background: #f2f2f2;
+	-webkit-transform: translate3d(0,0,0);
+	border-bottom: 1px solid #e5e5e5;
+	position: relative;
+}
+.logo-pic{
+	background-color:red;
+	border-radius:1000px;
+	font-size: 1.2rem;
+		font-weight: 700;
+		color: #fff;
+}
+#sn-bd{
+	/*导航条上面的文字*/
+	margin:auto;
+	width: 1190px;
+}
+.menu-bd{
+		position: absolute;
+		left: 0;
+		top: 27px;
+		background: #fff;
+		border: solid #eee;
+		border-width: 0 1px 1px;
+		width: 74px;
+		line-height: 1.4;
+		padding: 8px 10px;
+		display: none;
+}
+	.drop-down-list{
+    	position: relative;
+    	padding-left: 10px;
+    	padding-right:14px;
+    }
+.back-home {
+	line-height: 26px;
+		margin:0px 20px 0px 0px;
+		display:inline-block;
+}
+.sn-login-part {
+	display:inline-block;
+	margin:0px 20px 0px 0px;
+}
+.sn-mybrand ,.sn-sitemap, .sn-cart{
+	 padding: 0 10px;
+}
+
+.sn-seperate{
+	width: 0;
+		height: 14px;
+		vertical-align: top;
+		position: relative;
+		top: 6px;
+		left: 0;
+		font-size: 0;
+		border-left: 1px solid #ccc;
+}
+.triangle{
+  width:0;
+	height:0;
+	line-height: 0;
+	font-size:0;
+	border:4px solid #999;
+	border-left:4px solid transparent;
+	border-right:4px solid transparent;
+	border-bottom:4px solid transparent;
+	display: inline-block;
+	position: relative;
+	top:1px;
+	left:2px;
+}
+.sn-sitemap-div {
+	position:absolute;
+	top:27px;
+	right:10px;
+	left:auto;
+	margin:auto;
+	width:1188px;
+	height:30px;
+}
+.header-layout{
+	width: 1190px;
+	margin:0 auto;
+	padding-top: 26px;
+	height: auto;
+	height: 85px;
+}
+#mallLogo{
+	display: inline-block;
+	padding-top: 0;
+  width: 340px;
+  height: 85px;
+  float: left;
+}
+#mallLogo img{
+	width: 200px;
+	height: 35px;
+}
+#header-searchbar{
+	display: inline-block;
+	width: 540px!important;
+	height: 85px;
+	float: left;
+}
+.search-top-form{
+  border: solid #c40000;
+  border-width: 3px 0 3px 3px;
+  position: relative;
+  height: 32px;
+}
+.search-top-form input{
+  	position: relative;
+     	background: 0 0;
+  height: 22px;
+  	line-height: 22px;
+  padding: 6px;
+  width: 437px;
+  border:0;
+  font-weight: 900;
+  vertical-align: middle;
+  outline:none;
+}
+.search-top-form button{
+  	position: absolute;
+  right: 0;
+  top: 0;
+  width: 90px;
+  border: 0;
+  font-size: 16px;
+  letter-spacing: 4px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #c40000;
+  height: 35px;
+  overflow: hidden;
+  font-family: '\5FAE\8F6F\96C5\9ED1',arial,"\5b8b\4f53";
+}
+#header-searchbar ul{
+	list-style: none;   
+	margin-left:-13px;
+	height: 16px;     	
+	padding:0;
+	margin: 0;
+	padding-top: 6px;
+}
+#header-searchbar li{
+	display: inline-block;
+	border-right: 1px solid #ccc;
+	padding-right: 12px;
+	padding-left:12px;
+}
+#content{
+  position: relative;
+  width: auto;
+  margin: 0;
+}
 .top-main-container{
   position: relative;
 	width: 1190px;
 	margin: auto;
   background-color: white;
 }
-        #J_FpMainNav{
-        	list-style: none;
-        	position: relative;
-  			margin-left: 190px;
- 	 		height: 34px;
-  			line-height: 34px;
-		  	font-size: 0;
-        }
-        #J_FpMainNav li{
-        	position: relative;
- 		 	display: inline-block;
- 		 	padding: 0 20px;
-  			font-weight: 700;
-  			font-size: 14px;
-  			letter-spacing: normal;
-  			word-spacing: normal;
-  			vertical-align: top;   	
-        }
-        #fp-category-menu{
-  			position: relative;
-  			top: 0;
-  			left: 0;
-  			width: 100%;
-        background-color: rgb(221,221,221);
-        font-family: 'Microsoft YaHei';
-		    /*border:1px solid black;*/
-        }
-        .category-nav-container{
-          position: relative;
-        	width: 1190px;
-        	margin: auto;
-          /*border:1px solid black;*/
-        }
-        .category-menu-nav{
-        	position: relative;
-  			width: 190px;
-  			z-index: 4;
-  			background: url('../images/menubarbg.png') #181818 no-repeat;
-        }
-        .menu-nav-container-ul{
-        	position: relative;
-        	list-style: none;	
-        }
-        .menu-nav-container-ul li{
-			height: 30px;
- 			line-height: 30px;
- 			color: #fff;        
- 			text-align: left;
- 			padding-left:50px;
- 		}
+#J_FpMainNav{
+	list-style: none;
+	position: relative;
+margin-left: 190px;
+	height: 34px;
+line-height: 34px;
+font-size: 0;
+}
+#J_FpMainNav li{
+	position: relative;
+	display: inline-block;
+	padding: 0 20px;
+font-weight: 700;
+font-size: 14px;
+letter-spacing: normal;
+word-spacing: normal;
+vertical-align: top;   	
+}
+#fp-category-menu{
+position: relative;
+top: 0;
+left: 0;
+width: 100%;
+background-color: rgb(221,221,221);
+font-family: 'Microsoft YaHei';
+/*border:1px solid black;*/
+}
+.category-nav-container{
+  position: relative;
+	width: 1190px;
+	margin: auto;
+  /*border:1px solid black;*/
+}
+.category-menu-nav{
+	position: relative;
+width: 190px;
+z-index: 4;
+background: url('../images/menubarbg.png') #181818 no-repeat;
+}
+.menu-nav-container-ul{
+	position: relative;
+	list-style: none;	
+}
+.menu-nav-container-ul li{
+  height: 30px;
+	line-height: 30px;
+	color: #fff;        
+	text-align: left;
+	padding-left:50px;
+}
 .menu-title{
  	position: absolute;
   top: -45px;
@@ -544,6 +543,46 @@ body {
   height: 202px;
   overflow: hidden;
   background-color: white; 
+}
+.floor-show-middle-arrow{
+  position: absolute;
+    top: 90px;
+  width: 18px;
+  height: 25px;
+  cursor:pointer;
+}
+.arrow-left{
+  left:15px;background:url(../images/left-arow.png) no-repeat;
+}
+.arrow-right{
+  right:15px;background:url(../images/right-arow.png) no-repeat;
+}
+.brand-slide-content{
+  position:relative;
+  width:100px;
+  overflow:hidden;
+  height:100%; 
+  margin:0 auto;
+}
+.brand-slide-bg{
+  position: absolute; 
+  left:0; 
+  width: 500px;
+  overflow:hidden; 
+  height: 100%
+}
+.brand-slide-bg p{
+  float: left; 
+  overflow: hidden; 
+  width: 100px; 
+  display: block;
+}
+.brand-slide-bg a{
+    display: block;
+  padding: 17px 5px 0;
+  width: 90px;
+  height: 45px;
+  text-align: center;
 }
 .floor-show-bottom{
   position: absolute;
