--- a/css/tmall-stylesheet.css
+++ b/css/tmall-stylesheet.css
@@ -364,6 +364,7 @@ background: url('../images/menubarbg.png') #181818 no-repeat;
   position:absolute;
   top:0px;
   right:0px;
+
 }
 .banner-father{
   display: none;
@@ -566,10 +567,14 @@ background: url('../images/menubarbg.png') #181818 no-repeat;
 }
 .brand-slide-bg{
   position: absolute; 
-  left:0; 
+  /*left:-100px; */
   width: 500px;
   overflow:hidden; 
-  height: 100%
+  height: 100%;
+  -webkit-transition-property:all; 
+  -webkit-transition-duration:0.5s; 
+  -webkit-transition-timing-function:ease-in;
+  -webkit-transform:translate3d(-100px,0,0);
 }
 .brand-slide-bg p{
   float: left; 
