--- a/css/tmall-stylesheet.css
+++ b/css/tmall-stylesheet.css
@@ -571,8 +571,8 @@ background: url('../images/menubarbg.png') #181818 no-repeat;
   width: 500px;
   overflow:hidden; 
   height: 100%;
-  -webkit-transition-property:all; 
-  -webkit-transition-duration:0.5s; 
+  -webkit-transition-property:all;
+  -webkit-transition-duration:0s;
   -webkit-transition-timing-function:ease-in;
   -webkit-transform:translate3d(-100px,0,0);
 }
@@ -643,4 +643,31 @@ background: url('../images/menubarbg.png') #181818 no-repeat;
   height:167px;
   width: 193px;
   padding-left:4px;
+}
+.moveFromRight{
+  animation:moveFromRight 5s 1;
+  -moz-animation:moveFromRight 5s 1; /* Firefox */
+  -webkit-animation:moveFromRight 5s 1; /* Safari and Chrome */
+  -o-animation:moveFromRight 5s 1; /* Opera */
+}
+.moveToLeft{
+  animation:moveToLeft 5s 1;
+  -moz-animation:moveToLeft 5s 1; /* Firefox */
+  -webkit-animation:moveToLeft 5s 1; /* Safari and Chrome */
+  -o-animation:moveToLeft 5s 1; /* Opera */
+}
+@-webkit-keyframes moveFromRight {
+  from { -webkit-transform: translateX(100%); }
+}
+@keyframes moveFromRight {
+  from { -webkit-transform: translateX(100%); transform: translateX(100%); }
+  to{}
+}
+@-webkit-keyframes moveToLeft {
+  from { }
+  to { -webkit-transform: translateX(-100%); }
+}
+@keyframes moveToLeft {
+  from { }
+  to { -webkit-transform: translateX(-100%); transform: translateX(-100%); }
 }
